# SuperScaler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.CUDA  Dockerfile.test.CPU  Dockerfile.test.CUDA  LICENSE.txt  README.md  ReadMe.md  SECURITY.md  azure-pipelines-cuda.yml  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
ai_simulator/: .flake8  .gitignore  Dockerfile  README.md  __init__.py  pytest.ini  requirements.txt  run.py
cmake/: FindIBVerbs.cmake  FindNCCL.cmake  FindRDMACM.cmake  external_gtest.cmake  external_json.cmake
example/: sample_resource_pool.yaml
horovod/: setup.py
plan_gen/: __init__.py  device_assigner.py  operator_assigner.py  plan_generator.py  requirements.txt  resource.py  ssg_visitor.py
profiler/: comm_profiler.py  model_configs.py  op_profiler.py  p2p_band_profiler.py
runtime/: pretrain_gpt.py  pretrain_resnet.py  pretrain_t5.py
scripts/: aceso_gpt_execute.sh  aceso_gpt_execute_docker.sh  aceso_gpt_search.sh  aceso_resnet_execute.sh  aceso_resnet_execute_docker.sh  aceso_resnet_search.sh  aceso_t5_execute.sh  aceso_t5_execute_docker.sh  aceso_t5_search.sh  alpa_gpt_search_execute.sh  alpa_wresnet_search_execute.sh  get_common.py  get_e2e_performance.py  get_perf_model_acc.py  get_search_cost.py  megatron_gpt_execute.sh  megatron_gpt_execute_docker.sh  megatron_gpt_search.sh  megatron_resnet_execute.sh  megatron_resnet_execute_docker.sh  plot_all.sh  (+22 more)
src/backend/: CMakeLists.txt  superscaler_pywrap.cpp
src/backend/common/executor/: Dockerfile  config.hpp  cpu_kernels.hpp  executor_pub.hpp  gpu_kernels.cu  gpu_kernels.hpp  poll_executor.hpp
src/backend/common/executor/channel/: cpu_channel.hpp
src/backend/common/executor/cuda_ipc/: cuda_channel.hpp
src/backend/common/executor/samples/: allreduce_sample.cpp  cuda_task.cpp  handle_manager.cpp  ring_allreduce_sample.cpp
src/backend/common/executor/test/: googletest.cmake.in  test_mem_block.cpp  test_poll_executor.cpp  test_ring_buffer.cpp  test_shared_memory.cpp  test_worker_sched.cpp
src/backend/common/executor/test/cuda_ipc/: test_cuda_channel.cpp
src/backend/common/utils/: CMakeLists.txt  json_parser.hpp  logging.cpp  logging.hpp
src/backend/common_runtime/: CMakeLists.txt  session.cpp  session.hpp  util.cpp  util.hpp
src/backend/common_runtime/executor/: CMakeLists.txt  README.md  config.hpp  cpu_kernels.hpp  exec_ctx.hpp  exec_info.cpp  exec_info.hpp  executor.hpp  executor_pub.hpp  gpu_kernels.cu  gpu_kernels.hpp  poll_executor.cpp  poll_executor.hpp  rdma_tunnel.hpp  recv_task.cpp  recv_task.hpp  reduction_task.hpp  scale_task.hpp  send_task.cpp  send_task.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  task_sched.cpp  task_sched.hpp  worker.cpp  worker.hpp  worker_sched.cpp  worker_sched.hpp
src/backend/common_runtime/executor/channel/: channel.hpp  cpu_channel.hpp  fifo.hpp
src/backend/common_runtime/executor/cuda_ipc/: CMakeLists.txt  channel_manager.hpp  cuda_channel.cpp  cuda_channel.hpp  cuda_channel_defs.hpp  cuda_ipc_internal.hpp  handle_manager.cpp  handle_manager.hpp  shared_block.cpp  shared_block.hpp
src/backend/common_runtime/executor/samples/: CMakeLists.txt  allreduce_sample.cpp  cuda_channel.cpp  cuda_task.cpp  handle_manager.cpp  ring_allreduce_sample.cpp
src/backend/common_runtime/executor/test/: CMakeLists.txt  googletest.cmake  googletest.cmake.in  gtest-parallel.cmake  gtest-parallel.cmake.in  test_poll_executor.cpp  test_reduction_task.cpp  test_ring_buffer.cpp  test_scale_task.cpp  test_semaphore.cpp  test_send_recv_task.cpp  test_shared_memory.cpp  test_task.cpp  test_task_manager.cpp  test_task_sched.cpp  test_thread_safe_queue.cpp  test_worker.cpp  test_worker_sched.cpp
src/backend/common_runtime/executor/test/channel/: test_cpu_channel.cpp
src/backend/common_runtime/executor/test/cuda_ipc/: test_cuda_channel.cpp
src/backend/common_runtime/executor/test/utils/: utils.cpp  utils.hpp
src/backend/common_runtime/executor/utils/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.hpp  semaphore_wrapper.cpp  semaphore_wrapper.hpp  shared_memory.cpp  shared_memory.hpp  thread_safe_queue.hpp
src/backend/common_runtime/test/: CMakeLists.txt  superscaler_op_test.cc  superscaler_rt_test.cc  superscaler_test.cc
src/backend/common_runtime/test/plan/0/: plan.json
src/backend/common_runtime/test/plan/1/: plan.json
src/backend/common_runtime/utils/: json_parser.cpp
src/backend/tensorflow/: CMakeLists.txt  gpu_util.hpp  operation.cpp  operation.hpp
superscaler_dll/executor/: CMakeLists.txt  Dockerfile  ExecutorDesign.docx  cpu_kernels.hpp  exec_ctx.hpp  exec_info.cpp  exec_info.hpp  executor.hpp  gpu_kernels.cu  gpu_kernels.hpp  gpu_kernels_extend.cu  poll_executor.cpp  poll_executor.hpp  recv_task.cpp  recv_task.hpp  reduction_kernel.hpp  reduction_task.hpp  scale_task.hpp  send_task.cpp  send_task.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  task_sched.cpp  task_sched.hpp  worker.cpp  worker.hpp  worker_sched.cpp  worker_sched.hpp
superscaler_dll/executor/cuda_ipc/: CMakeLists.txt  channel_manager.hpp  cuda_channel.cpp  cuda_channel.hpp  cuda_channel_defs.hpp  cuda_ipc_internal.hpp  handle_manager.cpp  handle_manager.hpp  shared_pipe.cpp  shared_pipe.hpp  shared_table.hpp
superscaler_dll/executor/samples/: CMakeLists.txt  allreduce_sample.cpp  cuda_channel.cpp  executor_sample.cpp  handle_manager.cpp  ring_allreduce_sample.cpp
superscaler_dll/executor/test/: CMakeLists.txt  test_reduction_task.cpp  test_scale_task.cpp  test_scaler_task.cpp  test_semaphore.cpp  test_send_recv_task.cpp  test_task.cpp  test_task_manager.cpp  test_task_sched.cpp  test_thread_safe_queue.cpp  test_worker.cpp
superscaler_dll/executor/test/channel/: test_cpu_channel.cpp
superscaler_dll/executor/test/cuda_ipc/: test_cuda_ipc_single_process.cpp
superscaler_dll/executor/test/utils/: utils.cpp
superscaler_dll/executor/utils/: CMakeLists.txt  mem_block.hpp  ring_buffer.cpp  ring_buffer.hpp  semaphore_wrapper.cpp  semaphore_wrapper.hpp  shared_memory.cpp  shared_memory.hpp  thread_safe_queue.hpp
(+1329 files in other folders)
